force-app/main/default/objects/Consortium_Account__c/Consortium_Account__c.object-meta.xml
<CustomObject>
    <description>Represents the association between Consortium(s) and Account(s). ILMN Specific Info: This is a junction Object between Consortium and Accounts</description>
    <label>Consortium Account</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Consortium Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consortia Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>