force-app/main/default/objects/Consortium_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Purpose: Links account record to the Consortia Account
Team Responsible: Product Marketing</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consortia Accounts</relationshipLabel>
    <relationshipName>Consortia_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>