force-app/main/default/objects/Consortium_Account__c/fields/Consortia__c.field-meta.xml
<CustomField>
    <fullName>Consortia__c</fullName>
    <description>Purpose: Links consortium record to the Consortia Account
Team Responsible: Product Marketing</description>
    <label>Consortia</label>
    <referenceTo>Consortium__c</referenceTo>
    <relationshipLabel>Consortia Accounts</relationshipLabel>
    <relationshipName>Consortia_Accounts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>