force-app/main/default/objects/Consortium_Account__c/fields/Is_InActive__c.field-meta.xml
<CustomField>
    <fullName>Is_InActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purpose: Provide ability for Consortium manager to inactivate an Consortium Account
Team Responsible: Product Marketing</description>
    <label>Is InActive</label>
    <type>Checkbox</type>
</CustomField>