force-app/main/default/objects/Consortium_Account__c/fields/Principal_Investigator_Phone__c.field-meta.xml
<CustomField>
    <fullName>Principal_Investigator_Phone__c</fullName>
    <description>Purpose: Main contact&apos;s phone number
Team Responsible: Product Marketing</description>
    <formula>Principal_Investigator__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Principal Investigator Phone</label>
    <type>Text</type>
</CustomField>