force-app/main/default/objects/Consortium_Account__c/fields/Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Purpose: Additional account contact record
Team Responsible: Product Marketing</description>
    <label>Secondary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consortia Accounts (Secondary Contact)</relationshipLabel>
    <relationshipName>Consortia_Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>