force-app/main/default/objects/Consortium_Account__c/fields/Secondary_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Phone__c</fullName>
    <description>Purpose: Additional contact&apos;s phone number
Team Responsible: Product Marketing</description>
    <formula>Secondary_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Contact Phone</label>
    <type>Text</type>
</CustomField>