force-app/main/default/objects/Consortium_Account__c/fields/Territory_Region__c.field-meta.xml
<CustomField>
    <fullName>Territory_Region__c</fullName>
    <description>Purpose: Identifies territory region, based on account record
Team Responsible: Product Marketing</description>
    <formula>Account__r.Territory_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Region</label>
    <type>Text</type>
</CustomField>