force-app/main/default/objects/Consortium_Account__c/validationRules/CheckPrincipalInvestigatorNotOnAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckPrincipalInvestigatorNotOnAccount</fullName>
    <active>true</active>
    <description>Prevents the user from saving the record if the Principal Investigator is not a contact with the given account.</description>
    <errorConditionFormula>AND(
    NOT (ISBLANK ( Principal_Investigator__c )),
    IF( Principal_Investigator__r.AccountId &lt;&gt; Account__r.Id,
       TRUE,
       FALSE
       )
   )</errorConditionFormula>
    <errorDisplayField>Principal_Investigator__c</errorDisplayField>
    <errorMessage>Principal Investigator must first be added to the Account in order to save this record.</errorMessage>
</ValidationRule>