force-app/main/default/objects/Consortium_Account__c/validationRules/CheckSecondaryContactNotOnAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckSecondaryContactNotOnAccount</fullName>
    <active>true</active>
    <description>Prevents the user from saving the record if the secondary contact is not added as contacts on given account.</description>
    <errorConditionFormula>AND(
    NOT (ISBLANK( Secondary_Contact__c )),
    IF( Secondary_Contact__r.AccountId &lt;&gt;  Account__r.Id ,
       TRUE,
       FALSE
      )
   )</errorConditionFormula>
    <errorDisplayField>Secondary_Contact__c</errorDisplayField>
    <errorMessage>Secondary Contact must first be added to the Account in order to save this record.</errorMessage>
</ValidationRule>